--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "axios": "^1.12.2",
     "dayjs": "^1.11.18",
+    "framer-motion": "^12.23.24",
     "gray-matter": "^4.0.3",
     "next": "15.5.6",
     "next-seo": "^7.0.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-player": "^3.3.3",
     "rehype-highlight": "^7.0.2",
