fix: update French text in footer for proper apostrophe usage
style: adjust heading margins in MarkdownRenderer for better spacing

refactor: remove unused ReactPlayer import in MarkdownRenderer

feat: add Image component to Navbar for logo display

feat: implement ScrollToTop component for improved navigation

style: update TableOfContents styles for better readability

fix: simplify category mapping in TutorielsPageClient

docs: add Zigbee integration image to content

chore: create deploy script for Google Cloud Run deployment

chore: add logo image for branding

config: enable standalone output and optimizations in Next.js config

feat: add article title spacing diagram SVG

feat: add Zigbee screenshot image for content

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,14 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Google Cloud
+.gcloudignore
+gcloud-config/
+*.log
+cloudbuild-local.json
+.deploy/
+
+# Docker local builds
+docker-compose.override.yml
+*.dockerfile.local
